Agregada vista Panel, redireccionamientos y utilizando roles

--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
     "classnames": "^2.2.6",
+    "hamburger-react": "^2.4.0",
     "json-server": "^0.16.3",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "md5": "^2.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hot-toast": "^1.0.2",
     "react-icons": "^4.2.0",
+    "react-offcanvas": "^0.4.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "uid": "^2.0.0",
