--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^17.0.1",
     "react-hot-toast": "^1.0.2",
     "react-icons": "^4.2.0",
+    "react-loader-spinner": "^4.0.0",
     "react-offcanvas": "^0.4.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
