--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-offcanvas": "^0.4.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-spring": "^8.0.27",
     "uid": "^2.0.0",
     "universal-cookie": "^4.0.4",
     "uuid": "^8.3.2",
