--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
+    "axios": "^0.21.1",
     "classnames": "^2.2.6",
+    "cloudinary-react": "^1.6.8",
     "hamburger-react": "^2.4.0",
     "json-server": "^0.16.3",
     "jsonwebtoken": "^8.5.1",
