--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-loader-spinner": "^4.0.0",
     "react-modal": "^3.12.1",
     "react-offcanvas": "^0.4.0",
+    "react-phone-input-2": "^2.13.9",
     "react-phone-number-input": "^3.1.16",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
