--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.6.3",
     "antd": "^4.14.0",
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "classnames": "^2.2.6",
     "cloudinary-react": "^1.6.8",
     "hamburger-react": "^2.4.0",
@@ -16,8 +17,9 @@
     "jwt-decode": "^3.1.2",
     "md5": "^2.3.0",
     "moment": "^2.29.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-bootstrap": "^1.6.0",
+    "react-dom": "^17.0.2",
     "react-hot-toast": "^1.0.2",
     "react-icons": "^4.2.0",
     "react-loader-spinner": "^4.0.0",
