--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jwt-decode": "^3.1.2",
     "md5": "^2.3.0",
     "moment": "^2.29.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.2",
